# azw2zip

./: .gitignore  AGENTS.md  CLAUDE.md  DumpAZW6_py3.py  README.md  azw2zip.json  azw2zip.py  azw2zip_config.py  build.cmd  kfx_key_extractor.py  pyproject.toml  readme.txt  test_kfx_dir.py
.claude/: settings.local.json
DeDRM_Plugin/: __init__.py  __main__.py  argv_utils.py  config.py  ineptpdf.py  ion.py  k4mobidedrm.py  kfxdedrm.py  kgenpids.py  kindlekey.py  mobidedrm.py  scriptinterface.py
KFX Input/: config.py
KFX Input/kfxlib/: epub_output.py  kpf_book.py  resources.py  utilities.py  version.py  yj_book.py  yj_metadata.py  yj_structure.py  yj_to_epub.py  yj_to_epub_content.py  yj_to_epub_metadata.py  yj_to_epub_navigation.py  yj_to_epub_notebook.py  yj_to_epub_properties.py  yj_to_epub_resources.py  yj_to_image_book.py  yj_versions.py
KindleUnpack/lib/: kindleunpack.py  mobi_dict.py  mobi_html.py  mobi_k8resc.py  mobi_nav.py  mobi_ncx.py  mobi_opf.py  unpack_structure.py
kfxlib/: __init__.py  epub_output.py  message_logging.py  utilities.py  version.py  yj_structure.py  yj_to_epub_content.py  yj_to_epub_metadata.py  yj_to_epub_misc.py  yj_to_epub_navigation.py  yj_to_epub_properties.py  yj_versions.py
src/azw2zip/: __init__.py
