[project]
name = "azw2zip"
version = "0.3.0"
description = "Add your description here"
authors = [
    { name = "Rumia_Chnnel", email = "github@rumia-ch.uk" }
]
dependencies = [
    "lxml>=6.0.0",
    "pycryptodome>=3.23.0",
    "nuitka>=2.7.12",
    "zstandard>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/azw2zip"]
